metadata/force-app/main/default/objects/ccrz__E_Subscription__c/fields/ccrz__Account__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account associated with this subscription.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CC Subscriptions</relationshipLabel>
    <relationshipName>CCSubscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>