metadata/force-app/main/default/objects/ccrz__E_Subscription__c/fields/ccrz__AutoRenew__c.field-meta.xml
<CustomField>
    <fullName>ccrz__AutoRenew__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether or not this subscription automatically renews</description>
    <label>Auto Renew</label>
    <type>Checkbox</type>
</CustomField>