metadata/force-app/main/default/objects/ccrz__E_Subscription__c/fields/ccrz__CCOrder__c.field-meta.xml
<CustomField>
    <fullName>ccrz__CCOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to original order used to create this subscription.</description>
    <label>CC Order</label>
    <referenceTo>ccrz__E_Order__c</referenceTo>
    <relationshipLabel>CC Subscriptions</relationshipLabel>
    <relationshipName>CCSubscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>