metadata/force-app/main/default/objects/ccrz__E_Subscription__c/fields/ccrz__CCOrderItem__c.field-meta.xml
<CustomField>
    <fullName>ccrz__CCOrderItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to original order item used to create this subscription.</description>
    <label>CC Order Item</label>
    <referenceTo>ccrz__E_OrderItem__c</referenceTo>
    <relationshipLabel>CC Subscriptions</relationshipLabel>
    <relationshipName>CCSubscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>