metadata/force-app/main/default/objects/ccrz__E_Subscription__c/fields/ccrz__Comments__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Comments__c</fullName>
    <description>Any comments to note about this subscription</description>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>