metadata/force-app/main/default/objects/ccrz__E_Subscription__c/fields/ccrz__IgnoreInstallmentFrequencyFields__c.field-meta.xml
<CustomField>
    <fullName>ccrz__IgnoreInstallmentFrequencyFields__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Copied on creation from original ccrz__E_ProdSubTerm__c object.</description>
    <label>Ignore Installment Frequency Fields</label>
    <type>Checkbox</type>
</CustomField>