metadata/force-app/main/default/objects/ccrz__E_Subscription__c/fields/ccrz__InstallmentAddress__c.field-meta.xml
<CustomField>
    <fullName>ccrz__InstallmentAddress__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to a CC Contact Address object that contains the billing address data. This will be a unique copy of the address information captured when the subscription is checked out.</description>
    <label>Installment Address</label>
    <referenceTo>ccrz__E_ContactAddr__c</referenceTo>
    <relationshipLabel>CC Subscriptions (Installment Address)</relationshipLabel>
    <relationshipName>CCInstallmentSubscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>