metadata/force-app/main/default/objects/ccrz__E_Subscription__c/fields/ccrz__InstallmentLastDate__c.field-meta.xml
<CustomField>
    <fullName>ccrz__InstallmentLastDate__c</fullName>
    <description>Last date that payment will be billed for this subscription</description>
    <label>Installment Last Date</label>
    <type>DateTime</type>
</CustomField>