metadata/force-app/main/default/objects/ccrz__E_Subscription__c/fields/ccrz__OrderAddress__c.field-meta.xml
<CustomField>
    <fullName>ccrz__OrderAddress__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to a CC Contact Address object that contains subscription shipping address data. This will be a unique copy of the address information captured during checkout.</description>
    <label>Order Address</label>
    <referenceTo>ccrz__E_ContactAddr__c</referenceTo>
    <relationshipLabel>CC Subscriptions (Order Address)</relationshipLabel>
    <relationshipName>CCOrderSubscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>