metadata/force-app/main/default/objects/ccrz__E_Subscription__c/fields/ccrz__OrderNextDate__c.field-meta.xml
<CustomField>
    <fullName>ccrz__OrderNextDate__c</fullName>
    <description>The date of the next order for this subscription</description>
    <label>Order Next Date</label>
    <type>DateTime</type>
</CustomField>