metadata/force-app/main/default/objects/ccrz__E_Subscription__c/fields/ccrz__SPT__c.field-meta.xml
<CustomField>
    <fullName>ccrz__SPT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The sub prod term this subscription was ordered from</description>
    <label>SPT</label>
    <referenceTo>ccrz__E_SubProdTerm__c</referenceTo>
    <relationshipLabel>CC Subscriptions</relationshipLabel>
    <relationshipName>CCSubscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>