metadata/force-app/main/default/objects/ccrz__E_Subscription__c/fields/ccrz__StoredPayment__c.field-meta.xml
<CustomField>
    <fullName>ccrz__StoredPayment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The stored payment method for this subscription.</description>
    <label>Stored Payment</label>
    <referenceTo>ccrz__E_StoredPayment__c</referenceTo>
    <relationshipLabel>CC Subscriptions</relationshipLabel>
    <relationshipName>CCSubscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>