metadata/force-app/main/default/objects/ccrz__E_Subscription__c/fields/ccrz__SubscriptionStartDate__c.field-meta.xml
<CustomField>
    <fullName>ccrz__SubscriptionStartDate__c</fullName>
    <description>The start date of the subscription</description>
    <label>Subscription Start Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>